--- a/Secciones/productos.html
+++ b/Secciones/productos.html
@@ -162,7 +162,12 @@
       </section>
 
       <section class="container">
-        <h3 class="banner">CARRITO</h3>
+
+        <div class="carro-nombre">
+          <!--<h4 class="banner">CARRITO</h4>-->
+        </div>
+        
+
         <div class="carro-fila">
             <span class="carro-item carro-titulo carro-columna">ITEM</span>
             <span class="carro-precio carro-titulo carro-columna">PRECIO UNITARIO</span>
