saque todos los alerts y prompts, excepto uno

--- a/Secciones/productos.html
+++ b/Secciones/productos.html
@@ -75,6 +75,10 @@
     <main>
       <!--Galería de articulos a la venta, todavía son autoreferenciales, en un futuro estaran en mercado libre. -->
       <section class="galeria">
+         <div class="no-name" style="display: none;">
+           <h3>Ingrese su nombre:</h3>
+          <input type="text" name="name" class="form-control nombre-ingresado" required="required">   
+         </div>
         <h3 class="banner">Elegí el que más te guste!</h3>
         <div class="itemsTotal">
           
